--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
+  adapter: sqlite3
   database: db/production.sqlite3
+  adapter: pg
+  database: db/production.pg
